--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,11 +1,23 @@
 steps:
   # Build backend image
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/mt-bookclubs-backend:$SHORT_SHA', '-t', 'gcr.io/$PROJECT_ID/mt-bookclubs-backend:latest', './backend']
+    args: 
+      - 'build'
+      - '-t'
+      - 'gcr.io/$PROJECT_ID/mt-bookclubs-backend:$SHORT_SHA'
+      - '-t'
+      - 'gcr.io/$PROJECT_ID/mt-bookclubs-backend:latest'
+      - './backend'
 
   # Build frontend image
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/mt-bookclubs-frontend:$SHORT_SHA', '-t', 'gcr.io/$PROJECT_ID/mt-bookclubs-frontend:latest', './frontend']
+    args:
+      - 'build'
+      - '-t'
+      - 'gcr.io/$PROJECT_ID/mt-bookclubs-frontend:$SHORT_SHA'
+      - '-t'
+      - 'gcr.io/$PROJECT_ID/mt-bookclubs-frontend:latest'
+      - './frontend'
 
   # Push backend image
   - name: 'gcr.io/cloud-builders/docker'
@@ -16,26 +28,53 @@ steps:
     args: ['push', 'gcr.io/$PROJECT_ID/mt-bookclubs-frontend:latest']
 
   # Deploy backend to Cloud Run
-  - name: 'gcr.io/cloud-builders/gke-deploy'
+  - name: 'gcr.io/cloud-builders/gcloud'
     args:
-      - run
-      - --filename=gcp/backend-cloud-run.yaml
-      - --image=gcr.io/$PROJECT_ID/mt-bookclubs-backend:latest
-      - --location=us-central1
-      - --cluster=
+      - 'run'
+      - 'deploy'
+      - 'mt-bookclubs-backend'
+      - '--image'
+      - 'gcr.io/$PROJECT_ID/mt-bookclubs-backend:latest'
+      - '--platform'
+      - 'managed'
+      - '--region'
+      - 'us-central1'
+      - '--no-allow-unauthenticated'
+      - '--memory'
+      - '512Mi'
+      - '--timeout'
+      - '300'
+      - '--set-env-vars'
+      - 'MONGO_URI=${_MONGO_URI},JWT_SECRET=${_JWT_SECRET}'
 
   # Deploy frontend to Cloud Run
-  - name: 'gcr.io/cloud-builders/gke-deploy'
+  - name: 'gcr.io/cloud-builders/gcloud'
     args:
-      - run
-      - --filename=gcp/frontend-cloud-run.yaml
-      - --image=gcr.io/$PROJECT_ID/mt-bookclubs-frontend:latest
-      - --location=us-central1
-      - --cluster=
+      - 'run'
+      - 'deploy'
+      - 'mt-bookclubs-frontend'
+      - '--image'
+      - 'gcr.io/$PROJECT_ID/mt-bookclubs-frontend:latest'
+      - '--platform'
+      - 'managed'
+      - '--region'
+      - 'us-central1'
+      - '--allow-unauthenticated'
+      - '--memory'
+      - '256Mi'
+      - '--timeout'
+      - '300'
+      - '--set-env-vars'
+      - 'VITE_API_URL=https://mt-bookclubs-backend-${_REGION}.a.run.app'
 
 images:
   - 'gcr.io/$PROJECT_ID/mt-bookclubs-backend:latest'
   - 'gcr.io/$PROJECT_ID/mt-bookclubs-frontend:latest'
+
+substitutions:
+  _MONGO_URI: 'mongodb+srv://user:password@cluster.mongodb.net/bookclubs'
+  _JWT_SECRET: 'your-jwt-secret-key'
+  _REGION: 'us-central1'
 
 options:
   machineType: 'N1_HIGHCPU_8'
